[package]
name = "application"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[lib]
doctest = false

[features]
testing = [
    "authentication/testing",
    "common/testing",
    "database/testing",
    "errors/testing",
    "events/testing",
    "function_runner/testing",
    "isolate/testing",
    "keybroker/testing",
    "log_streaming/testing",
    "metrics/testing",
    "model/testing",
    "node_executor/testing",
    "proptest",
    "proptest-derive",
    "runtime/testing",
    "search/testing",
    "storage/testing",
    "shape_inference/testing",
    "udf/testing",
    "usage_tracking/testing",
    "value/testing",
    "vector/testing",
    "exports/testing",
    "storage_zip_reader/testing",
]

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
async_lru = { workspace = true }
authentication = { workspace = true }
aws_s3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
cmd_util = { workspace = true }
common = { workspace = true }
convex_fivetran_destination = { workspace = true }
convex_macro = { workspace = true }
csv-async = { workspace = true }
database = { workspace = true }
either = { workspace = true }
errors = { workspace = true }
events = { workspace = true }
exports = { workspace = true }
fastrace = { workspace = true }
file_storage = { workspace = true }
float_next_after = { workspace = true }
function_runner = { workspace = true }
futures = { workspace = true }
futures-async-stream = { workspace = true }
governor = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
http_client = { workspace = true }
humansize = { workspace = true }
isolate = { workspace = true }
itertools = { workspace = true }
keybroker = { workspace = true }
log_streaming = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
metrics = { workspace = true }
mime2ext = { workspace = true }
model = { workspace = true }
node_executor = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
pb = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rand = { workspace = true }
regex = { workspace = true }
search = { workspace = true }
semver = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shape_inference = { workspace = true }
short_future = { workspace = true }
slugify = "0.1.0"
smallvec = { workspace = true }
sourcemap = { workspace = true }
storage = { workspace = true }
storage_zip_reader = { workspace = true }
strum = { workspace = true }
sync_types = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
thousands = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
udf = { workspace = true }
udf_metrics = { workspace = true }
url = { workspace = true }
usage_tracking = { workspace = true }
value = { workspace = true }
vector = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
async_zip = { workspace = true }
authentication = { workspace = true, features = ["testing"] }
common = { workspace = true, features = ["testing"] }
database = { workspace = true, features = ["testing"] }
errors = { workspace = true, features = ["testing"] }
events = { workspace = true, features = ["testing"] }
exports = { workspace = true, features = ["testing"] }
function_runner = { workspace = true, features = ["testing"] }
isolate = { workspace = true, features = ["testing"] }
keybroker = { workspace = true, features = ["testing"] }
log_streaming = { workspace = true, features = ["testing"] }
metrics = { workspace = true, features = ["testing"] }
model = { workspace = true, features = ["testing"] }
must-let = { workspace = true }
node_executor = { workspace = true, features = ["testing"] }
openidconnect = { workspace = true }
portpicker = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
runtime = { workspace = true, features = ["testing"] }
search = { workspace = true, features = ["testing"] }
shape_inference = { workspace = true, features = ["testing"] }
storage = { workspace = true, features = ["testing"] }
storage_zip_reader = { workspace = true, features = ["testing"] }
udf = { workspace = true, features = ["testing"] }
usage_tracking = { workspace = true, features = ["testing"] }
value = { workspace = true, features = ["testing"] }
vector = { workspace = true, features = ["testing"] }

[lints]
workspace = true
