[package]
name = "async_lru"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
common = { path = "../common" }
errors = { path = "../errors" }
futures = { workspace = true }
lru = { workspace = true }
metrics = { path = "../metrics" }
parking_lot = { workspace = true }
tracing = { workspace = true }
value = { path = "../value" }

[dev-dependencies]

common = { path = "../common", features = ["testing"] }
convex_macro = { path = "../convex_macro" }
errors = { path = "../errors", features = ["testing"] }
metrics = { path = "../metrics", features = ["testing"] }
rand = { workspace = true }
runtime = { path = "../runtime", features = ["testing"] }
tokio = { workspace = true }
value = { path = "../value", features = ["testing"] }
