[package]
name = "async_lru"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
common = { workspace = true }
errors = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
value = { workspace = true }

[dev-dependencies]

common = { workspace = true, features = ["testing"] }
convex_macro = { workspace = true }
errors = { workspace = true, features = ["testing"] }
metrics = { workspace = true, features = ["testing"] }
rand = { workspace = true }
runtime = { workspace = true, features = ["testing"] }
tokio = { workspace = true }
value = { workspace = true, features = ["testing"] }

[lints]
workspace = true
