[package]
name = "async_zip_reader"
version = "0.1.0"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2021"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
common = { path = "../common" }
runtime = { path = "../runtime" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
zip = { version = "2.2.2", features = ["deflate-zlib-ng", "deflate64", "zstd"] }

[lints]
workspace = true

[dev-dependencies]
async_zip = { workspace = true }
async_zip_0_0_9 = { workspace = true }
common = { path = "../common", features = ["testing"] }
futures = { workspace = true }
runtime = { path = "../runtime", features = ["testing"] }
