[package]
name = "async_zip_reader"
version = "0.1.0"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2021"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
zip = { version = "2.2.2", features = ["deflate-zlib-ng", "deflate64", "zstd"] }

[dev-dependencies]
async_zip = { workspace = true }
async_zip_0_0_9 = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
