[package]
name = "authentication"
version = "0.1.0"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2021"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[lib]
doctest = false

[features]
metrics = ["common/testing"]
tracy-tracing = ["common/tracy-tracing"]
testing = [
    "common/testing",
    "errors/testing",
    "keybroker/testing",
    "metrics/testing",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
biscuit = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
errors = { path = "../errors" }
futures = { workspace = true }
http = { workspace = true }
keybroker = { path = "../keybroker" }
metrics = { path = "../metrics" }
mime = { workspace = true }
oauth2 = { workspace = true }
openidconnect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sync_types = { package = "convex_sync_types", path = "../convex/sync_types" }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
common = { path = "../common", features = ["testing"] }
errors = { path = "../errors", features = ["testing"] }
keybroker = { path = "../keybroker", features = ["testing"] }
metrics = { path = "../metrics", features = ["testing"] }
tokio = { workspace = true }

[lints]
workspace = true
