[package]
name = "authentication"
version = "0.1.0"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2021"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[lib]
doctest = false

[features]
metrics = ["common/testing"]
tracy-tracing = ["common/tracy-tracing"]
testing = [
    "common/testing",
    "errors/testing",
    "keybroker/testing",
    "metrics/testing",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
biscuit = { workspace = true }
chrono = { workspace = true }
common = { workspace = true }
data-url = { workspace = true }
errors = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
keybroker = { workspace = true }
metrics = { workspace = true }
mime = { workspace = true }
oauth2 = { workspace = true }
openidconnect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sync_types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["testing"] }
errors = { workspace = true, features = ["testing"] }
keybroker = { workspace = true, features = ["testing"] }
metrics = { workspace = true, features = ["testing"] }
tokio = { workspace = true }

[lints]
workspace = true
