[package]
name = "aws_utils"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-types-convert = { workspace = true }
aws-types = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
