[package]
name = "backend_harness"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
big_brain_client = { workspace = true }
big_brain_private_api_types = { workspace = true }
clap = { workspace = true }
cmd_util = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
health_check = { workspace = true }
home = { workspace = true }
keybroker = { workspace = true }
log_interleaver = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
