[package]
name = "big_brain_private_api_types"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[package.metadata.cargo-machete]
ignored = [
    # proptest_derive macro depends on proptest
    "proptest",
    "proptest_derive",
    # Used in macros
    "derive_more",
    "serde_json",
]

[lib]
doctest = false

[features]
testing = ["common/testing", "keybroker/testing", "proptest", "proptest-derive"]

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
derive_more = { workspace = true }
enum-iterator = { workspace = true }
keybroker = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tuple_struct = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["testing"] }
keybroker = { workspace = true, features = ["testing"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }

[lints]
workspace = true
