[package]
name = "cmd_util"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
sentry-tracing = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
