[package]
name = "config_loader"
version = "0.1.0"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
futures = { workspace = true }
prost-reflect = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["testing"] }
convex_macro = { workspace = true }
pb = { workspace = true }
runtime = { workspace = true, features = ["testing"] }
tempfile = { workspace = true }

[lints]
workspace = true
