[package]
name = "convex_sdk_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Proc macros for the Convex Rust SDK - #[query], #[mutation], #[action]"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
convex_sdk = { path = "../convex_sdk" }
