[package]
name = "db_connection"
version = "0.1.0"
authors = ["Convex, Inc. <no-reply@convex.dev>"]
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[features]
default = []
testing = [
    "clusters/testing",
    "common/testing",
    "mysql/testing",
    "postgres/testing",
]

[dependencies]
anyhow = { workspace = true }
clusters = { workspace = true }
common = { workspace = true }
mysql = { workspace = true }
postgres = { workspace = true }
sqlite = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
clusters = { workspace = true, features = ["testing"] }
common = { workspace = true, features = ["testing"] }
mysql = { workspace = true, features = ["testing"] }
postgres = { workspace = true, features = ["testing"] }

[lints]
workspace = true
